misc mobile improvements

--- a/Drip/Components/FileUpload.razor
+++ b/Drip/Components/FileUpload.razor
@@ -7,7 +7,7 @@
         
         <div class="upload-content">
             <div class="upload-icon">
-                <Upload Size="48" />
+                @AppIcon.Upload(48)
             </div>
             
             <h3 class="upload-title">Upload OpenAPI Document</h3>
