--- a/Drip/wwwroot/css/variables.css
+++ b/Drip/wwwroot/css/variables.css
@@ -113,6 +113,8 @@
     --transition-slow: 0.3s ease;
     
     /* Z-Index */
+    --z-sidebar: 10;
+    --z-topbar: 100;
     --z-dropdown: 1000;
     --z-modal: 2000;
     --z-tooltip: 3000;
