--- a/Drip/Pages/Operation.razor
+++ b/Drip/Pages/Operation.razor
@@ -18,7 +18,7 @@
         <div class="operation-detail">
             @if (_tag is not null)
             {
-                <h1>@_tag</h1>
+                <h1 class="tag-name">@_tag</h1>
             }
 
             <div class="operation-header">
