Refactor DocumentSelector and AppIcon components; update light/dark mode toggle and clean up unused code

--- a/Drip/Components/TopBar/AppTopBar.razor
+++ b/Drip/Components/TopBar/AppTopBar.razor
@@ -23,7 +23,7 @@
             <NavLink href="upload" class="icon-button button" title="Upload OpenAPI Document" aria-label="Upload OpenAPI Document">
                 @AppIcon.Upload()
             </NavLink>
-            <button type="button" class="icon-button" title="Toggle Light/Dark Mode" aria-label="Toggle Light/Dark Mode" onclick="document.documentElement.classList.toggle('dark');">
+            <button type="button" class="icon-button" title="Toggle Light/Dark Mode" aria-label="Toggle Light/Dark Mode" onclick="document.documentElement.classList.toggle('light');">
                 <span class="light-mode-only">
                     @AppIcon.Sun()
                 </span>
