--- a/Drip/Components/DocumentSelector.razor
+++ b/Drip/Components/DocumentSelector.razor
@@ -1,17 +1,14 @@
-@using Drip.Services
 @inject OpenApiStateService StateService
-@inject IJSRuntime JSRuntime
 
-<div class="document-selector @(IsExpanded ? "expanded" : "")" @ref="dropdownRef">
+@if (IsExpanded)
+{
+    <HeadlessBlazor.HBOutsideClickBehavior Container="_dropdownRef" OnClick="ToggleDropdown" />
+}
+
+<div class="document-selector @(IsExpanded ? "expanded" : "")" @ref="_dropdownRef">
     <button type="button" class="document-selector-toggle" @onclick="ToggleDropdown" title="Switch between documents">
         <span class="document-selector-icon">
-            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
-                <polyline points="14,2 14,8 20,8"/>
-                <line x1="16" y1="13" x2="8" y2="13"/>
-                <line x1="16" y1="17" x2="8" y2="17"/>
-                <polyline points="10,9 9,9 8,9"/>
-            </svg>
+            @AppIcon.File()
         </span>
         <span class="document-selector-text">
             @if (CurrentDocument != null)
@@ -81,35 +78,7 @@
 @code {
     private bool IsExpanded { get; set; }
     private DocumentInfo? CurrentDocument => StateService.GetCurrentDocumentInfo();
-    private ElementReference dropdownRef;
-    
-    protected override void OnInitialized()
-    {
-        StateService.OnDocumentsListChanged += HandleDocumentsChanged;
-    }
-    
-    protected override async Task OnAfterRenderAsync(bool firstRender)
-    {
-        if (firstRender)
-        {
-            await JSRuntime.InvokeVoidAsync("addDocumentSelectorClickOutsideHandler", dropdownRef, DotNetObjectReference.Create(this));
-        }
-    }
-    
-    public void Dispose()
-    {
-        StateService.OnDocumentsListChanged -= HandleDocumentsChanged;
-    }
-    
-    [JSInvokable]
-    public void OnClickOutside()
-    {
-        if (IsExpanded)
-        {
-            IsExpanded = false;
-            StateHasChanged();
-        }
-    }
+    private ElementReference _dropdownRef;
     
     private void ToggleDropdown()
     {
@@ -127,18 +96,10 @@
         StateService.RemoveDocument(documentId);
     }
     
-    private void HandleDocumentsChanged()
+    private static string GetSourceLabel(string source) => source switch
     {
-        StateHasChanged();
-    }
-    
-    private string GetSourceLabel(string source)
-    {
-        return source switch
-        {
-            "default" => "Default",
-            "uploaded" => "Uploaded",
-            _ => source
-        };
-    }
+        "default" => "Default",
+        "uploaded" => "Uploaded",
+        _ => source
+    };
 } 
